fix: adjust alignment of header js removed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 
 /* SPACE GROTESK FONT */
 @font-face {
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   src: url('/fonts/space_grotesk/SpaceGrotesk-Regular.woff2') format('woff2'),
     url('/fonts/space_grotesk/SpaceGrotesk-Regular.woff') format('woff');
   font-weight: normal;
@@ -12,7 +12,7 @@
 
 /* NUNITO SANS FONT */
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: "Nunito Sans";
   src: url('/fonts/nunito_sans/NunitoSans10pt-Regular.woff2') format('woff2'),
     url('/fonts/nunito_sans/NunitoSans10pt-Regular.woff') format('woff');
   font-weight: normal;
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: "Nunito Sans";
   src: url('/fonts/nunito_sans/NunitoSans10pt-Bold.woff2') format('woff2'),
     url('/fonts/nunito_sans/NunitoSans10pt-Bold.woff') format('woff');
   font-weight: bold;
@@ -30,7 +30,7 @@
 }
 
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: "Nunito Sans";
   src: url('/fonts/nunito_sans/NunitoSans10pt-Black.woff2') format('woff2'),
     url('/fonts/nunito_sans/NunitoSans10pt-Black.woff') format('woff');
   font-weight: extrabold;
